# sdb

./: .appveyor.yml  .gitignore  .travis.yml  AUTHORS  COPYING  Makefile  README  README.md  TODO  autogen.sh  clang-analyzer.sh  config.mk  meson.build  meson_options.txt
.github/workflows/: ci.yml  codeql.yml  coverity-scan.yml
Attic/: README.md
Attic/btree/: Makefile  btree.c  btree.h  main.c
Attic/judy/: Makefile  README.md  judy64na.c  main.c  r_judy.h
Attic/mixed/: Makefile  main.c  mixed.c  r_mixed.h
Attic/pair/: Makefile  main.c  pair.c  r_pair.h
Attic/r_db/: Makefile  README.md  db.c  pair.c  r_db.h  table.c
Attic/r_db/t/: test.c
Attic/slist/: Makefile  README.md  main.c  slist.c
Attic/trie/: Makefile  README.md  main.c  r_trie.h  trie.c
benchmark/: Makefile  java.java  luvit.lua  newlisp.lsp  node-cc.js  node-sdb.js  perl.pl  t.c
bindings/benchmark/: Makefile  luvit-sdb.lua  node-ffi.js  node.js  python.py  t.c  test.vala
bindings/csharp/: Makefile  Sdb.cs  Test.cs
bindings/ctypes/: sdb.py  test.py
bindings/d/: Makefile  main.d  sdb.d
bindings/go/: Makefile  sdb.go  sdb_test.go
bindings/go/test/: main.go
bindings/newlisp/: arrays.lsp  main.lsp  sdb.lsp
bindings/nodejs/cc/: Makefile  sdb.cc
bindings/nodejs/ffi/: README.md  index.js  package.json  sdb.js  slist.js  test.js
bindings/nodejs/json/: Makefile  README.md  binding.gyp  binding.gyp.dist  binding.gyp.nogit  genjson.js  package.json  sdb-json.cc  test.js
bindings/nodejs/nan/: Makefile  README.md  binding.gyp  dist.sh  package.json  sdb.cc  test.js
bindings/nodejs/nan/lib/: sdb.gyp
bindings/python/: LICENSE.txt  MANIFEST.in  Makefile  README.md  SimpleDB.py  pysdb.c  sdb3.py  setup.py  test.py
bindings/python/nsdb/: lib.c
bindings/python/r2sdb/: __init__.py
bindings/python/sdb/: __init__.py
bindings/v/: Makefile  main.v
bindings/v/sdb/: sdb.v
bindings/vala/: Makefile  mcsdb.vapi  mctest.vala  sdb.pc  sdb.vapi  test.vala
bindings/vala/types/: Makefile  array.vala  arrayiterator.vala  hash.vala  iterator.vala  list.vala  listiterator.vala  main.vala  sdbinstance.vala  stack.vala
doc/: Book.txt  array.md  backups.md  basic.md  binary-arrays.md  binary-data.md  binary-pointers.md  binary-struct.md  binary.md  bindings.md  cas.md  cdb.md  expire.md  intro.md  json.md  locks.md  namespaces.md  query.md  refs.md  strings.md  types.md
html/: index.html  sdb.js
include/sdb/: asserts.h  buffer.h  cwisstable.h  heap.h  ht.h  ht_inc.h  ht_pu.h  ht_su.h  ht_uu.h  rangstr.h  sdb.h  types.h  version.h
memcache/: Makefile  README  client.c  cmds.c  main.c  mainclient.c  mcsdb.h  memcache.c  memcache.h  net.c  protocol.c  test  test.sh
newlisp/: main.lsp  sdb.lsp
nodejs/: main.js  sdb.js
nodejs/cc/: sdb.cc  test.js  wscript
nodejs/ffi/: main.js
one/: Makefile  a.c
pkgconfig/: Makefile  mcsdb.d  sdb.d
server/: Makefile  README  auth.sdb  login.sh  logout.sh  passwd.sh
src/: Makefile  alloc.c  array.c  base64.c  buffer.c  buffer.inc.c  cdb.c  cdb.h  cdb_make.c  cgen.c  dict.c  dict.h  disk.c  entry.c  fmt.c  heap.c  heap2.c  ht.c  ht.h  ht.inc  ht.inc.c  ht_inc.c  ht_inc.h  ht_p.c  ht_p.h  ht_pp.c  ht_pu.c  ht_su.c  ht_u.c  ht_u.h  ht_uu.c  journal.c  json.c  libsdb.dylib  list.c  list.h  lock.c  ls.c  ls.h  main.c  (+20 more)
src/json/: Makefile  README  api.c  indent.c  js0n.c  json.c  json.h  main.c  path.c  rangstr.c  rangstr.h  sdb.c  test.c  util.h
test/: Makefile  add10k.sh  afor.c  array.test  atest.sh  bench-expire.c  bench.c  cas.c  chkkey.c  collision.sh  createfail.sh  delkey.sh  drain.c  dumptwice.c  expire.c  fixjson.pl  fmt.c  fmtarr.c  grepdb.sh  hook.c  hook2.c  js.sh  merge.c  milset.c  milsetv.c  ns.c  nsabuse.c  nset.c  sdb-test.mk  sdb-test.sh  siolpain.c  stack.c  stress1.c  syncget.c  tdd.sh  testgrep.sh  verypush.c
test/api/: Makefile  array.c  refs.c
test/auth/: adduser.sh  auth.sdb.txt
test/bench/: Makefile  bench-array.c  bench-new.c  bench-reset.c  bench-set.c  bench-stack.c  bench-sync.c  meson.build  prof.c
test/bench/vs/: Makefile  bench-leveldb.cxx  bench-leveldb.py  bench-sdb.c  bench-sdb.py
test/fuzz/: Makefile
test/fuzz/minimized/: .tmp  id:000021  id:000052  id:000086  id:000115  id:000135  id:000138  id:000140  id:000159  id:000180  id:000184  id:000190  id:000214  id:000231  id:000237  id:000305  id:000307  id:000311  id:000313  id:000315  id:000347  id:000351  id_000056  id_000073  id_000092  id_000094  id_000096  id_000105  id_000144  id_000154  id_000172  id_000229  id_000238  id_000246  id_000261  id_000308  id_000323  id_000346
test/fuzz/minimized_second/: id:000009  id:000017  id:000022  id:000023  id:000026  id:000030  id:000031  id:000039  id:000049  id:000050  id:000052  id:000053  id_000004  id_000028  id_000040  id_000048  id_000051  id_000054
test/fuzz/minimized_third/: id:000003  id:000008  id:000035  id:000038  id:000039  id:000041  id:000048  id:000049  id:000050  id:000065  id:000073  id:000076  id:000078  id:000079  id:000081  id:000087  id:000099  id:000113  id:000124  id:000138  id:000139  id:000146  id:000153  id:000155  id:000156  id:000159  id:000162  id_000010  id_000017  id_000024  id_000040  id_000052  id_000068  id_000072  id_000074  id_000077  id_000114  id_000116  id_000118  id_000120  (+11 more)
test/gperf/: Makefile  data.sdb.txt
test/heap/: Makefile  main.c
test/leaks/: Makefile  chk.c  jsn.c  leak.sh  qry.c
test/reset/: Makefile  test-reset.c
test/suite/: run.sh
test/unit/: .gdb_history  Makefile  meson.build  minunit.h  run.sh  test_array.c  test_dict.c  test_diff.c  test_getf.c  test_hash.c  test_ls.c  test_sdb.c
vala/: Makefile  mcsdb.pc  mcsdb.vapi  mctest.vala  sdb.pc  sdb.vapi  test.vala
vala/types/: Makefile  array.vala  arrayiterator.vala  hash.vala  iterable.vala  iterator.vala  list.vala  listiterator.vala  main.vala  sdbinstance.vala  sdbtypes.pc  serializable.vala  stack.vala  stackiterator.vala
