option('enable_tests', type: 'boolean', value: true, description: 'Build unit tests in test/unit')
option('local', type: 'boolean', value: false, description: 'Adds support for local/side-by-side installation (sets rpath if needed)')
# RESERVED option('default_library', type: 'string', value: 'shared', description: 'Specify shared or static')
